--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Freedom of the press -- Portugal'
 - !lcc 'DP'
+- GITenberg
 title: Liberdade de Imprensa
 url: http://www.gutenberg.org/ebooks/34274
